--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -145,9 +145,15 @@
     />
   </head>
   <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
-    </div>
+    <main>
+      <h1 class="title">Simple Editor</h1>
+      <p>
+        <textarea class="text-area"></textarea>
+      </p>
+      <div>
+        <button class="button button--save">Save</button>
+        <button class="button button--load">Load</button>
+      </div>
+    </main>
   </body>
 </html>
