--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -145,15 +145,16 @@
     />
   </head>
   <body>
-    <main>
+    <main class="main">
       <h1 class="title">Simple Editor</h1>
-      <p>
-        <textarea class="text-area"></textarea>
-      </p>
-      <div>
-        <button class="button button--save">Save</button>
-        <button class="button button--load">Load</button>
+
+      <textarea class="text-area text-area--js"></textarea>
+
+      <div class="button--flex">
+        <button class="button button--save button-save--js">Save</button>
+        <button class="button button--load button-load--js">Load</button>
       </div>
+
     </main>
   </body>
 </html>
