--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTF: Webpack starter kit</title>
+    <title>Simple Editor</title>
     <meta name="description" content="Your project description" />
     <!-- Title -->
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="Simple Editor" />
     <!-- OPTIONAL description. 2-4 sentences. -->
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="My og description of my webpage" />
     <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://tomekgasowski.github.io/spimple-editor/" />
     <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
     <meta
       property="og:image"
-      content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png"
+      content="https://tomekgasowski.github.io/spimple-editor/og.png"
     />
 
     <!-- uncomment the line below to enable PWA  -->
