--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,7 +14,7 @@
     <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
     <meta
       property="og:image"
-      content="https://github.com/tomekgasowski/simple-editor/og.png"
+      content="https://tomekgasowski.github.io/simple-editor/og.png"
     />
 
     <!-- uncomment the line below to enable PWA  -->
